bunch of updates

--- a/what-is-jupyter.ipynb
+++ b/what-is-jupyter.ipynb
@@ -8,9 +8,26 @@
     }
    },
    "source": [
-    "#  Jupyter\n",
+    "#  Documenting Reproducible Research with Jupyter Notebooks\n",
     "\n",
     "## Matt Burton (@mcburton) - University of Pittsburgh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Reproducibility\n",
+    "\n",
+    "## Empirical Reproducibility - \"*experimental researchers capturing descriptive information about (non-computational) aspects of their research protocols and methods*\"\n",
+    "\n",
+    "## Computational Reproducibility - \"*include[s] digital scholarly objects such as data and code*\"\n",
+    "\n",
+    "[Stodden, Victoria. *Resolving Irreproducibility in Empirical and Computational Research.* IMS Bulletin (2013)](http://bulletin.imstat.org/2013/11/resolving-irreproducibility-in-empirical-and-computational-research/)"
    ]
   },
   {
@@ -557,11 +574,37 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Future Directions - Jupyter Lab\n",
+    "\n",
+    "![Jupyter Lab](http://blog.jupyter.org/content/images/2016/07/jlab-screenshot-nb-con-term-2.png)\n",
+    "\n",
+    "- [JupyterLab: the next generation of the Jupyter Notebook](http://blog.jupyter.org/2016/07/14/jupyter-lab-alpha/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Future Directions - nteract\n",
+    "\n",
+    "![Nteract](https://cloud.githubusercontent.com/assets/836375/18421299/d95ad398-783b-11e6-8b23-d54cf7caad1e.png)\n",
+    "\n",
+    "- [nteract Jupyter Desktop Appliation](https://nteract.io/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Play Time!\n",
     "\n",
-    "## [https://github.com/mcburton/SUDS-jupyter-workshop](https://github.com/mcburton/SUDS-jupyter-workshop)"
+    "## [http://mybinder.org/repo/mcburton/SUDS-jupyter-workshop](http://mybinder.org/repo/mcburton/SUDS-jupyter-workshop)"
    ]
   },
   {
@@ -621,11 +664,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.2"
+   "version": "3.5.1"
   },
   "widgets": {
    "state": {},
-   "version": "1.0.0"
+   "version": "1.1.1"
   }
  },
  "nbformat": 4,
