fixing playtime link & other minor issues

--- a/what-is-jupyter.ipynb
+++ b/what-is-jupyter.ipynb
@@ -231,14 +231,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world!\n"
+     ]
+    }
+   ],
    "source": [
     "# Executed code cells have their output displayed below\n",
     "print('hello world!')"
@@ -310,31 +318,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "source": [
-    "Raw text cells are just plain text,\n",
-    "     it preserves the formatting\n",
-    "     \n",
-    "     \n",
-    "     of the cell.\n",
-    "     \n",
-    "nothing special happens when you execute them."
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
+   "outputs": [],
    "source": [
     "Raw text cells are just plain text,\n",
     "     it preserves the formatting\n",
@@ -589,7 +581,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Future Directions - nteract\n",
     "\n",
@@ -600,11 +596,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Play Time!\n",
     "\n",
-    "## [http://mybinder.org/repo/mcburton/SUDS-jupyter-workshop](http://mybinder.org/repo/mcburton/SUDS-jupyter-workshop)"
+    "## [http://mybinder.org/repo/dssatpitt/jupyter-workshop](http://mybinder.org/repo/dssatpitt/jupyter-workshop)"
    ]
   },
   {
